# rust-wasm-game

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs
tests/: app.rs
ts/: main.ts
