[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.67"
features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
futures = "0.3.30"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4.40"